2004-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: scandir check is no longer needed.

2004-05-05  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: set LIBC on HPUX

2004-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Detect JNI headers in GNU classpath sources as well.

2004-05-05  Raja R Harinath  <rharinath@novell.com>

	* runtime/net_2_0/Makefile.am (install-data-local, uninstall-local): 
	Only disable this if INSTALL_2_0 is disabled.

2004-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/DefaultWsdlHelpGenerator.aspx: add any cookie in the request to
	the request we do for the actual web service.

2004-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for SIGEV_THREAD being defined before checking
	for AIO support. Fixes compilation under FreeBSD.

2004-05-04  Raja R Harinath  <rharinath@novell.com>

	* runtime/net_1_1/Makefile.am (mono_runtime): Use USE_JIT, not
	JIT_SUPPORTED.
	(install-data-local, uninstall-data-local): Run runtime with
	libtool.
	* runtime/net_2_0/Makefile.am: Likewise.
	Report from Urs C Muff <umuff@quark.com>.

2004-05-03  Jackson Harper  <jackson@ximian.com>

	* man/gacutil.1: Basic man page for gacutil. This doesn't include
	the new non-standard options yet.
	
2004-05-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/machine.config: added version and publickeytoken.

2004-05-01  Duncan Mak  <duncan@ximian.com>

	* runtime/net_1_1/Makefile.am:
	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Add NUnit
	dlls here.
	(non_gac_assemblies): Removed, every thing is migrated over to gac_assemblies.
	(EXTRA_DIST): Include only gac_assemblies.
	(dist_assemblies_DATA): It's referring to $(non_gac_assemblies)
	and that is no gone now. So remove as well.
	($(non_gac_assemblies)): Bye bye.

2004-05-01  Duncan Mak  <duncan@ximian.com>
	
	* runtime/net_1_1/Makefile.am (gac_assemblies_list): Add